# bc-al-chunker

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/bc_al_chunker/: __init__.py  chunker.py  config.py  cross_references.py  models.py  parser.py  serializers.py
src/bc_al_chunker/adapters/: __init__.py  azure_devops.py  github.py  local.py
tests/: conftest.py  test_api.py  test_app_metadata.py  test_chunker.py  test_cross_references.py  test_parser.py  test_serializers.py
tests/fixtures/: app.json  codeunit_implements.al  codeunit_multi_implements.al  interface.al  large_codeunit.al  page_card.al  page_extension.al  page_list.al  query.al  report.al  simple_enum.al  simple_table.al  table_extension.al  table_with_triggers.al
tests/test_adapters/: test_azure_devops.py  test_github.py  test_local.py
