[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "bc-al-chunker"
version = "0.1.3"
description = "Static analysis and RAG-optimized chunking for Business Central AL files"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Andrijan Tasevski" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Indexing",
]
keywords = [
    "business-central",
    "al",
    "chunking",
    "rag",
    "embeddings",
    "code-analysis",
]
dependencies = []

[project.optional-dependencies]
github = ["httpx[http2]>=0.27"]
azure = ["httpx[http2]>=0.27"]
all = ["httpx[http2]>=0.27"]

[dependency-groups]
dev = [
    "httpx[http2]>=0.27",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.7",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/andrijantasevski/bc-al-chunker"
Repository = "https://github.com/andrijantasevski/bc-al-chunker"
Issues = "https://github.com/andrijantasevski/bc-al-chunker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bc_al_chunker"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "RUF", # ruff-specific
    "PT",  # flake8-pytest-style
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RSE", # flake8-raise
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bc_al_chunker"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.coverage.run]
source = ["bc_al_chunker"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
